--- a/CloudKit/Base.lproj/Main.storyboard
+++ b/CloudKit/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,47 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CloudKit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wyY-Yu-ewE">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="clh-fP-DfV"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="Title" id="Sae-KS-VFZ">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ChP-Cf-hLs">
+                                            <connections>
+                                                <action selector="addNoteBtn:" destination="BYZ-38-t0r" id="R5b-gu-jgb"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Nab-4g-iWX">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="Nab-4g-iWX" secondAttribute="bottom" id="6fU-OV-bOm"/>
+                            <constraint firstItem="wyY-Yu-ewE" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Fkk-DM-WBc"/>
+                            <constraint firstItem="Nab-4g-iWX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Nl9-tX-Icw"/>
+                            <constraint firstItem="wyY-Yu-ewE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="aud-Zb-toD"/>
+                            <constraint firstItem="Nab-4g-iWX" firstAttribute="top" secondItem="wyY-Yu-ewE" secondAttribute="bottom" id="jju-yo-wex"/>
+                            <constraint firstItem="wyY-Yu-ewE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tX0-I7-S2l"/>
+                            <constraint firstItem="Nab-4g-iWX" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="zDd-en-ICm"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="117.85714285714285"/>
         </scene>
     </scenes>
 </document>
